# ai-kanban-board

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  ai_client.py  auth.py  board.py  board_service.py  chat.py  chat_schema.py  db.py  main.py  models.py
backend/app/static/: index.html
backend/tests/: conftest.py  test_ai.py  test_auth.py  test_board.py  test_chat.py  test_health.py
docs/: DATABASE.md  PLAN.md  code_review.md  code_review_opencode.md
frontend/: AGENTS.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: debug-tall.spec.ts  kanban.spec.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AddCardForm.tsx  Board.tsx  Card.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  Column.tsx  EditableColumnTitle.tsx  LoginForm.tsx  components.test.tsx
frontend/src/data/: dummyData.ts
frontend/src/hooks/: useAuth.ts  useBoard.test.ts  useBoard.ts  useChat.test.ts  useChat.ts
frontend/src/lib/: api.ts  boardReducer.test.ts  boardReducer.ts  dropIndex.test.ts  dropIndex.ts
frontend/src/types/: board.ts
scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
