[project]
name = "kanban-backend"
version = "0.1.0"
description = "FastAPI backend for the Kanban PM app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "itsdangerous>=2.2",
    "sqlalchemy>=2.0",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
